Fixes to text alignment

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: 'Inter', sans-serif;
     text-align: center;
-    background-color: blue;
 }
 
 .hero {
@@ -34,6 +33,16 @@ h1{
     border-radius: 28px;
     padding: 15px 60px;
     font-weight: bold;
+	 background-color: #C2C0C0;
+	 color: black;
+	 text-decoration: none;
+}
+
+/* Hover effect for hero button */
+
+.hero-btn:hover {
+	color: white;
+	background-color: black; 
 }
 
 .hoverbox{
@@ -71,12 +80,19 @@ h1{
     background-color: #D9D9D9;
     margin-right: 74px;
     margin-bottom: 45px;
+	 display: flex;
+	 justify-content: center;
+	 flex-direction: column;
 }
 
 .colorbox{
     width: 685px;
     height: 423px;
     background-color: #D9D9D9;
+	 display:flex;
+	 flex-direction: column;
+	 justify-content: center;
+	
 }
 
 /* Hover Effects */
